<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.settingslib.widget.MainSwitchPreference
        android:defaultValue="true"
        android:key="folio_cover"
        android:persistent="false"
        android:summary="@string/folio_summary"
        android:title="@string/folio_title" />
    <com.android.settingslib.widget.MainSwitchPreference
        android:defaultValue="true"
        android:key="pen_enabled"
        android:persistent="false"
        android:summary="@string/pen_enabled_summary"
        android:title="@string/pen_enabled_title" />
    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="false"
        android:dependency="pen_enabled"
        android:key="pen_wakeup"
        android:persistent="false"
        android:summary="@string/pen_wakeup_summary"
        android:title="@string/pen_wakeup_title" />
    <androidx.preference.ListPreference
        android:defaultValue="5"
        android:dependency="pen_enabled"
        android:entries="@array/pen_action_entries"
        android:entryValues="@array/pen_action_values"
        android:key="pen_single_action"
        android:persistent="false"
        android:summary="%s"
        android:title="@string/pen_single_action_title" />
    <androidx.preference.ListPreference
        android:defaultValue="10"
        android:dependency="pen_enabled"
        android:entries="@array/pen_action_entries"
        android:entryValues="@array/pen_action_values"
        android:key="pen_double_action"
        android:persistent="false"
        android:summary="%s"
        android:title="@string/pen_double_action_title" />
    <androidx.preference.ListPreference
        android:defaultValue="2"
        android:dependency="pen_enabled"
        android:entries="@array/pen_action_entries"
        android:entryValues="@array/pen_action_values"
        android:key="pen_triple_action"
        android:persistent="false"
        android:summary="%s"
        android:title="@string/pen_triple_action_title" />
    <androidx.preference.ListPreference
        android:defaultValue="0"
        android:dependency="pen_enabled"
        android:entries="@array/pen_action_entries"
        android:entryValues="@array/pen_action_values"
        android:key="pen_long_action"
        android:persistent="false"
        android:summary="%s"
        android:title="@string/pen_long_action_title" />
    <androidx.preference.ListPreference
        android:defaultValue="0"
        android:dependency="pen_enabled"
        android:entries="@array/pen_action_entries"
        android:entryValues="@array/pen_action_values"
        android:key="pen_long_click_action"
        android:persistent="false"
        android:summary="%s"
        android:title="@string/pen_long_click_action_title" />
    <com.android.settingslib.widget.MainSwitchPreference
        android:defaultValue="true"
        android:key="dolby_enabled"
        android:persistent="false"
        android:summary="@string/dolby_enabled_summary"
        android:title="@string/dolby_enabled_title" />
    <androidx.preference.ListPreference
        android:defaultValue="0"
        android:dependency="dolby_enabled"
        android:entries="@array/dolby_profile_entries"
        android:entryValues="@array/dolby_profile_values"
        android:key="dolby_profile"
        android:persistent="false"
        android:summary="%s"
        android:title="@string/dolby_profile_title" />
</PreferenceScreen>
